Fix off-screen position

--- a/src/react/main.css
+++ b/src/react/main.css
@@ -409,7 +409,7 @@ html {
   height: 100%;
   width: 311px;
   background-color: #fff;
-  right: -150;
+  right: -311;
   opacity: 0;
   z-index: 2;
   top: 0;
